--- a/uni_form/templates/uni_form/whole_uni_form.html
+++ b/uni_form/templates/uni_form/whole_uni_form.html
@@ -22,14 +22,7 @@
     {% if inputs %}
         <div class="buttonHolder">
             {% for input in inputs %}
-                <input type="{{ input.input_type }}"
-                        name="{{ input.name|slugify }}"
-                        value="{{ input.value }}"
-                        {% ifnotequal input.input_type "hidden" %}
-                            class="{{ input.field_classes }}"
-                            id="{{ input.input_type }}-id-{{ input.name|slugify }}"
-                        {% endifnotequal %}
-                        />
+                {{ input.render }}
             {% endfor %}
         </div>
     {% endif %}
